--- a/languages/es-ES/common.json
+++ b/languages/es-ES/common.json
@@ -13,5 +13,13 @@
   "errors": {
     "unknown": "Ocurrió un error desconocido",
     "no_permission": "No tienes permiso para usar este comando"
+  },
+  "commands": {
+    "language": {
+      "description": "Configurar el idioma del servidor",
+      "option_language": "El idioma a establecer para este servidor",
+      "success": "¡Idioma del servidor actualizado a {{language}}!",
+      "error": "No se pudo actualizar el idioma del servidor. Por favor intenta de nuevo."
+    }
   }
 }
