feat: update error messages and remove language configuration commands

--- a/languages/en-US/common.json
+++ b/languages/en-US/common.json
@@ -12,14 +12,7 @@
   },
   "errors": {
     "unknown": "An unknown error occurred",
-    "no_permission": "You don't have permission to use this command"
-  },
-  "commands": {
-    "language": {
-      "description": "Configure the server language",
-      "option_language": "The language to set for this server",
-      "success": "Server language updated to {{language}}!",
-      "error": "Failed to update server language. Please try again."
-    }
+    "no_permission": "You don't have permission to use this command",
+    "server_only": "This command can only be used in a server"
   }
 }
