--- a/languages/es-ES/common.json
+++ b/languages/es-ES/common.json
@@ -12,14 +12,7 @@
   },
   "errors": {
     "unknown": "Ocurrió un error desconocido",
-    "no_permission": "No tienes permiso para usar este comando"
-  },
-  "commands": {
-    "language": {
-      "description": "Configurar el idioma del servidor",
-      "option_language": "El idioma a establecer para este servidor",
-      "success": "¡Idioma del servidor actualizado a {{language}}!",
-      "error": "No se pudo actualizar el idioma del servidor. Por favor intenta de nuevo."
-    }
+    "no_permission": "No tienes permiso para usar este comando",
+    "server_only": "Este comando solo puede usarse en un servidor"
   }
 }
